--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
 
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-12 text-center animate-box">
-						<p><img src="images/cover_bg_1.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
+						<p><img src="images/bg2.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
 					</div>
 					<div class="col-md-6 text-center animate-box">
-						<p><img src="images/cover_bg_2.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
+						<p><img src="images/bg-3.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
 					</div>
 					<div class="col-md-6 text-center animate-box">
-						<p><img src="images/cover_bg_3.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
+						<p><img src="images/bg4.jpeg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
 					</div>
 				</div>
 				<div class="row">
@@ -227,7 +227,7 @@
 					<div class="col-md-12">
 						<ul id="fh5co-portfolio-list">
 
-							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_1.jpg); ">
+							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/bg5.jpeg); ">
 								<a href="#" class="color-3">
 									<div class="case-studies-summary">
 										<span>Give Love</span>
@@ -236,7 +236,7 @@
 								</a>
 							</li>
 						
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_3.jpg); ">
+							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/bg6.jpeg); ">
 								<a href="#" class="color-4">
 									<div class="case-studies-summary">
 										<span>Give Love</span>
@@ -245,7 +245,7 @@
 								</a>
 							</li>
 
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_1.jpg); "> 
+							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/bg7.jpeg); "> 
 								<a href="#" class="color-5">
 									<div class="case-studies-summary">
 										<span>Give Love</span>
@@ -253,7 +253,7 @@
 									</div>
 								</a>
 							</li>
-							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cover_bg_3.jpg); ">
+							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/bg8.jpeg); ">
 								<a href="#" class="color-6">
 									<div class="case-studies-summary">
 										<span>Give Love</span>
