--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/bg-image.jpg);">
 				<div class="desc animate-box">
 					<h2><strong>Donate</strong> for the <strong>Poor Children</strong></h2>
-					<span>HandCrafted by <a href="http://frehtml5.co/" target="_blank" class="fh5co-site-name">FreeHTML5.co</a></span>
+					<span>Let's join hands and save the world</span>
 					<span><a class="btn btn-primary btn-lg" href="#">Donate Now</a></span>
 				</div>
 			</div>
@@ -130,7 +130,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Become a volunteer</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Help us connect with various minds and communities and help the poor</p>
 								<p><a href="#">Learn More</a></p>
 							</div>
 						</div>
